...

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/playCard"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="25dp"
            app:cardBackgroundColor="@color/colorGrean">
...
